# OpenShell-Research

./: .gitignore  .gitlab-ci.yml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  search.json  zensical.toml
dev-notes/: authors.json  index.html
projects/openshell-middleware-kit/: AGENTS.md  README.md  pyproject.toml
projects/openshell-middleware-kit/src/openshell_middleware_kit/: cli.py  generator.py
projects/openshell-middleware-kit/tests/: test_cli.py  test_generator.py
projects/privacy-guard/: .openshell-middleware-manifest.json  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  Makefile  README.md  REGEX_SCANNER_PLAN.md  middleware-dev-manifest.json  pyproject.toml
projects/privacy-guard/docs/: architecture  index.md
projects/privacy-guard/examples/custom-engine/: README.md  custom_engine.py  gateway.toml  policy.yaml  privacy-guard-config.yaml  privacy_guard_app.py
projects/privacy-guard/examples/email-scanner/: .gitignore  README.md  gateway.toml  middleware_server.py  policy.yaml
projects/privacy-guard/examples/openshell-e2e/: README.md  capture_server.py  middleware_server.py  policy.yaml  run.sh
projects/privacy-guard/examples/openshell-manual/: README.md  gateway.toml  policy.yaml
projects/privacy-guard/examples/regex-configs/: README.md  hipaa.yaml  profiles.yaml
projects/privacy-guard/examples/regex-engine/: README.md  gateway.toml  patterns.yaml  policy.yaml  privacy-guard-config.yaml
projects/privacy-guard/examples/regex-scanner/: .gitignore  README.md  gateway.toml  generate_gateway_config.py  pi-models.template.json  policy.pi.template.yaml  policy.yaml  regex-scanner.yaml
projects/privacy-guard/scripts/: benchmark_privacy_guard.py  check.sh  validate.sh
projects/privacy-guard/src/privacy_guard/: __init__.py  base.py  config.py  constants.py  engine_registry.py  errors.py  processor.py  request_processor.py  string_validators.py  timeout.py  validation.py
projects/privacy-guard/src/privacy_guard/bindings/: __init__.py  supervisor_middleware_pb2.py  supervisor_middleware_pb2.pyi  supervisor_middleware_pb2_grpc.py
projects/privacy-guard/src/privacy_guard/body/: __init__.py  base.py  json.py
projects/privacy-guard/src/privacy_guard/engines/: __init__.py  base.py  regex.py
projects/privacy-guard/src/privacy_guard/payloads/: __init__.py  request.py  result.py
projects/privacy-guard/src/privacy_guard/request_body/: __init__.py  json.py
projects/privacy-guard/src/privacy_guard/scanners/: __init__.py  base.py  passthrough.py  regex.py
projects/privacy-guard/tests/: __init__.py  scanner_helpers.py  test_config.py  test_engine_registry.py  test_errors.py  test_hardening.py  test_payloads.py  test_processor.py  test_request_processor.py  test_single_block_composition.py  test_typing_policy.py
projects/privacy-guard/tests/body/: test_base.py  test_json.py
projects/privacy-guard/tests/engines/: test_base.py  test_regex.py
projects/privacy-guard/tests/examples/: test_custom_engine.py  test_email_scanner.py  test_openshell_e2e.py  test_regex_engine.py  test_regex_scanner.py
projects/privacy-guard/tests/request_body/: test_base.py  test_json.py
projects/privacy-guard/tests/scanners/: test_passthrough.py  test_regex.py  test_scanner_models.py
projects/privacy-guard/tests/service/: __init__.py  test_server.py  test_servicer.py
projects/python-project-template/: .gitignore  README.md  pyproject.toml  requirements.txt
projects/python-project-template/src/python_project_template/: __init__.py  cli.py
projects/python-project-template/tests/: test_cli.py
projects/reachy-mini-openshell/: .dockerignore  .env.example  .env.hf-realtime.example  .env.local-stt.example  .env.openai-realtime.example  .gitignore  Dockerfile  Dockerfile.openshell  Makefile  ONBOARD_SETUP.md  README.md  index.html  pyproject.toml  requirements-rest.txt
projects/reachy-mini-openshell/docs/: research-plan.md
projects/reachy-mini-openshell/native-controller/: README.md  pyproject.toml
projects/reachy-mini-openshell/native-controller/tests/: test_audio.py  test_camera_adapter.py  test_openshell.py
projects/reachy-mini-openshell/openshell/: Dockerfile.camera-prompt-hotfix  policy-camera-enabled-motion-disabled.yaml  policy-head-motion-enabled.yaml  policy-motion-disabled.yaml  policy-safe.yaml  policy.local-sim.yaml
projects/reachy-mini-openshell/scripts/: fake_openai_backend.py  smoke-local-stt.sh  start-local.sh
projects/reachy-mini-openshell/src/reachy_mini_conversation_app/: __init__.py  __main__.py  backend_check.py  backend_runtime.py  camera_worker.py  chat_completions.py  config.py  console.py  conversation_stream.py  dance_emotion_moves.py  goto_queue_move.py  local_stt_backend.py  main.py  mcp_client.py  mcp_server.py  media_result_processor.py  moves.py  native_app.py  openai_realtime.py  prompts.py  realtime_backends.py  rest_tool_transport.py  riva_asr.py  robot_runtime.py  sandbox_audio.py  sandbox_control.py  speech_endpoints.py  tool_transport.py  utils.py  vision_router.py
projects/reachy-mini-openshell/src/reachy_openshell/: backend.py  smoke.py
projects/reachy-mini-openshell/tests/: conftest.py  test_backend_check.py  test_backend_runtime.py  test_camera_policy.py  test_chat_completions_media.py  test_config.py  test_conversation_stream.py  test_fake_openai_backend.py  test_local_stt_backend.py  test_main.py  test_mcp_server.py  test_media_result_processor.py  test_mic_phrase.py  test_moves_delivery.py  test_openai_realtime.py  test_package.py  test_prompts.py  test_reachy_constructors.py  test_realtime_backends.py  test_rest_tool_transport.py  test_riva_asr.py  test_robot_runtime.py  test_sandbox_audio.py  test_sandbox_control.py  test_speech_endpoints.py  test_tool_transports.py  test_vision_router.py
projects/reachy-mini-openshell/tests/audio/: test_pcm.py
projects/reachy-mini-openshell/tests/tools/: test_background_tool_manager.py  test_camera.py  test_core_tools.py  test_move_head.py  test_play_emotion.py  test_scan_scene.py
projects/reachy-mini-openshell/tests/vision/: test_processors.py
(+172 files in other folders)
