[project]
name = "openshell-middleware-kit"
version = "0.1.0"
description = "Create and update version-matched OpenShell middleware projects."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA CORPORATION & AFFILIATES" },
]
dependencies = [
    "typer>=0.16,<1",
]

[project.scripts]
omkit = "openshell_middleware_kit.cli:main"

[project.urls]
Repository = "https://github.com/NVIDIA/OpenShell-Research"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.12,<1",
    "ty>=0.0.53",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=openshell_middleware_kit",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/openshell_middleware_kit/templates"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/openshell_middleware_kit/templates"]

[tool.uv]
required-version = ">=0.11.0"
