[project]
name = "privacy-guard"
version = "0.1.0"
description = "Inspect and enforce policy on provider-bound OpenShell requests."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "NVIDIA CORPORATION & AFFILIATES" },
]
dependencies = [
  "grpcio>=1.81.1,<2",
  "protobuf>=6.33.5,<7",
  "pydantic>=2.11,<3",
  "regex>=2026.7.19,<2027",
  "typer>=0.16,<1",
  "typing-extensions>=4.12,<5",
]

[project.scripts]
privacy-guard = "privacy_guard.service.server:app"

[project.urls]
Repository = "https://github.com/NVIDIA/OpenShell-Research"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.12,<0.13",
  "ty>=0.0.1a16,<0.1",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["src/privacy_guard/bindings"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.src]
# Generated protobuf/gRPC bindings are checked at their handwritten adapter seam;
# their generator-owned implementations and incomplete annotations stay excluded.
exclude = ["src/privacy_guard/bindings"]

[tool.ty.rules]
blanket-ignore-comment = "error"
missing-override-decorator = "ignore"
missing-type-argument = "error"
redundant-cast = "error"
unresolved-attribute = "error"
unresolved-global = "error"
unresolved-import = "error"
unresolved-reference = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"

[[tool.ty.overrides]]
include = ["examples/**"]

[tool.ty.overrides.rules]
missing-override-decorator = "ignore"

[tool.uv]
required-version = ">=0.11.0"
