[project]
name = "python-project-template"
version = "0.1.0"
description = "Minimal uv-managed Python project template for OpenShell research."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA CORPORATION & AFFILIATES" },
]
dependencies = [
    "click>=8.1,<9",
]

[project.scripts]
python-project-template = "python_project_template.cli:main"

[project.urls]
Repository = "https://github.com/NVIDIA/OpenShell-Research"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.12,<1",
    "ty>=0.0.53",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=python_project_template",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ty.src]
include = ["src", "tests"]

[tool.uv]
required-version = ">=0.8.0"
