[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_conversation_app"
version = "0.3.0"
description = "Reachy Mini conversation demo for OpenShell."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
 "aiortc>=1.13.0",
 "fastrtc>=0.0.34",
 "gradio==5.50.1.dev1",
 "huggingface-hub==1.3.0",
 "opencv-python>=4.12.0.88",
 "python-dotenv",
 "openai>=2.1",
 "httpx>=0.27",
 "reachy_mini_dances_library",
 "reachy_mini_toolbox",
 "reachy-mini[mujoco]==1.8.0",
 "eclipse-zenoh~=1.7.0",
 "gradio_client>=1.13.3",
]
[[project.authors]]
name = "Pollen Robotics"
email = "contact@pollen-robotics.com"

[dependency-groups]
dev = [
 "pytest",
 "pytest-asyncio",
 "ruff==0.12.0",
 "pre-commit",
 "types-requests",
 "python-semantic-release>=10.5.3",
 "ty>=0.0.53",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
]

[project.optional-dependencies]
local_vision = [ "torch>=2.1", "transformers==5.0.0rc2", "num2words",]
yolo_vision = [ "ultralytics", "supervision", "onnxruntime",]
mediapipe_vision = [ "mediapipe==0.10.14",]
all_vision = [ "torch>=2.1", "transformers==5.0.0rc2", "num2words", "ultralytics", "supervision", "onnxruntime", "mediapipe==0.10.14",]

[project.scripts]
reachy-mini-conversation-app = "reachy_mini_conversation_app.main:main"
reachy-mini-backend-check = "reachy_mini_conversation_app.backend_check:main"
reachy-mini-sandbox-audio = "reachy_mini_conversation_app.sandbox_audio:main"
reachy-agent-control = "reachy_mini_conversation_app.sandbox_control:main"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 119
exclude = [ ".venv", "dist", "build", "**/__pycache__", "*.egg-info", ".pytest_cache",]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
reachy_mini_conversation_app = [ "images/*", "profiles/**/*.py", "profiles/**/*.txt",]

[tool.ruff.lint]
select = [ "E", "F", "W", "I", "C4", "D",]
ignore = [ "E501", "D100", "D203", "D213",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src", "native-controller/src"]

[tool.setuptools.packages.find]
where = [ "src",]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
no-lines-before = [ "standard-library", "local-folder",]
known-local-folder = [ "reachy_mini_conversation_app",]
known-first-party = [ "reachy_mini", "reachy_mini_dances_library", "reachy_mini_toolbox",]
split-on-trailing-comma = true
