[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-openshell-controller"
version = "0.2.0"
description = "Trusted Reachy Mini media and OpenShell lifecycle controller."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "pillow>=10,<13",
  "reachy-mini>=1.8,<1.9",
  "uvicorn>=0.34,<1",
  "websockets>=15,<16",
]

[project.entry-points.reachy_mini_apps]
reachy_mini_openshell_controller = "reachy_mini_openshell_controller.app:ReachyOpenShellApp"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C4", "D"]
ignore = ["D203", "D213"]
