[project]
name = "__DISTRIBUTION_NAME__"
version = "0.1.0"
description = "OpenShell supervisor middleware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.81.1,<2",
    "protobuf>=6.33.5,<7",
]

[project.scripts]
__DISTRIBUTION_NAME__ = "__PACKAGE_NAME__.server:main"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
    "ty>=0.0.53",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/__PACKAGE_NAME__/bindings"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/__PACKAGE_NAME__/bindings"]

[tool.uv]
required-version = ">=0.11.0"
